fix alignment issue

--- a/style0.css
+++ b/style0.css
@@ -1,8 +1,9 @@
-body{background-image: url(../odin-recipes/images/background.jpg); display: block; margin: auto;
-text-align: center;text-decoration: none;}
+body{background-image: url(../odin-recipes/images/background.jpg); display: block;
+text-align: center;align-items: center;}
 #image{
 display: block;margin-left: auto;
 margin-right: auto;width: 50%;}
 h1{color: beige; background-color: black;{
     font-size: larger;background-color:black;color: beige;list-style: none;border-radius: 20px;
 }
+button{font-size: larger;}
